--- a/app/views/end-to-end/post-mvp/task-list/list-1-3.html
+++ b/app/views/end-to-end/post-mvp/task-list/list-1-3.html
@@ -1,6 +1,14 @@
 {% set hideBackButton = true %}
 
-{% extends 'end-to-end/layout-account.html' %}
+{% if nosignin == 'true' %}
+
+    {% extends 'end-to-end/layout.html' %}  
+
+{% else %}     
+
+    {% extends 'end-to-end/layout-account.html' %}
+
+{% endif %}
 
 {% block pageTitle %}
     Water Management Grant - Round 3
@@ -12,73 +20,66 @@
         <div class="govuk-grid-column-two-thirds">
 
            <span class="govuk-caption-xl">Browns Hill Farm reservoir (WM-VMA-1234)</span>
-            <h1 class="govuk-heading-xl">Water Management Grant - Round 3</h1>
-
-            <span class="content-section">
-                <!-- EOI approved, application ready to start -->
-                <h3 class="govuk-heading-m">Your expression of interest is being reviewed by the Rural Payments Agency</h3>
-                <div class="govuk-inset-text">
-                    The review process will be completed by <strong>7 Jan 2025</strong>.
-                </div>
-            </span>
-
+            <h1 class="govuk-heading-xl">Apply for a Water Management grant</h1>
 
             <ol class="govuk-prototype-kit-task-list">
             <li>
 
                 <!-- EOI Scenario 3b -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
+                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Tell us about your project
                 </h2>
-                
+                <p>You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
+
                 <ul class="govuk-task-list">
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="../eligibility/common/farming-type" aria-describedby="expression-of-interest-1-status">Check eligibility and scoring</a>
+                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">Enter your organisation's details</a>
                     </div>
-                    <div class="govuk-task-list__status" id="expression-of-interest-1-status">
-                           Completed
+                        <div class="govuk-task-list__status" id="expression-of-interest-1-status">
+                            Completed
+                     </div>
+                </li>
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                    <div class="govuk-task-list__name-and-hint">
+                        <a class="govuk-link govuk-task-list__link" href="../eligibility/common/farming-type" aria-describedby="expression-of-interest-2-status">Check your project meets our funding priorities</a>
+                    </div>
+                    <div class="govuk-task-list__status" id="expression-of-interest-2-status">
+                        Completed
                     </div>
                 </li>
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                        <a class="govuk-link govuk-task-list__link" href="../eligibility/funding/business" aria-describedby="expression-of-interest-2-status">Check your details</a>
+                        <a class="govuk-link govuk-task-list__link" href="../eligibility/funding/consent" aria-describedby="expression-of-interest-3-status">Submit your project details for us to review</a>
                     </div>
-                    <div class="govuk-task-list__status" id="expression-of-interest-2-status">
-                           Completed
-                    </div>
+                        <div class="govuk-task-list__status" id="expression-of-interest-3-status">
+                            Completed
+                        </div>
+
                 </li>
-                    <li class="govuk-task-list__item govuk-task-list__item--with-link">
-                        <div class="govuk-task-list__name-and-hint">
-                            <a class="govuk-link govuk-task-list__link" href="../eligibility/funding/consent" aria-describedby="expression-of-interest-3-status">Register your interest</a>
-                        </div>
-                            <div class="govuk-task-list__status" id="expression-of-interest-3-status">
-                                Completed
-                        </div>
-                    </li>
-                <li class="govuk-task-list__item">
+                {# <li class="govuk-task-list__item">
                     <div class="govuk-task-list__name-and-hint">
-                        Expression of interest review outcome
+                        Expression of interest outcome
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-4-status">
                         Cannot start yet
                     </div>
-                </li>
+                </li> #}
                 </ul>
             </li>
+            <p class="govuk-body" style="margin-top: 0em; margin-bottom: 2em;">We’ll let you know the outcome of our review by <strong>19 May 2025</strong></p>
     
                 <li>
                     <!-- Application Scenario 2a -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Apply
+                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Prepare your application
                 </h2>
-                <p class="govuk-hint">You will be notified if you are approved to start the full application</p>
 
                 <ul class="govuk-task-list">
 
                     <li class="govuk-task-list__item">
                         <div class="govuk-task-list__name-and-hint">
-                            Download application forms
+                            Download your application forms
                         </div>
                         <div class="govuk-task-list__status" id="application-1-status">
                             Cannot start yet
@@ -94,7 +95,7 @@
                     </div>
                 </li>
 
-                <li class="govuk-task-list__item">
+                {# <li class="govuk-task-list__item">
                     <div class="govuk-task-list__name-and-hint">
                     <div>Check your details</div>
                     </div>
@@ -110,7 +111,7 @@
                     <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-4-status">
                     Cannot start yet
                     </div>
-                </li>
+                </li> #}
                 
                 </ul>
             </li>
@@ -118,20 +119,21 @@
 
             <!-- Agreement Scenario 1 -->
             <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit your application
             </h2>
+            <p>You must submit your full application by 11.59pm on <strong>3 January 2026</strong></p>
 
             <ul class="govuk-task-list">
             <li class="govuk-task-list__item">
                 <div class="govuk-task-list__name-and-hint">
-                <div>Read agreement</div>
+                <div>Submit your application</div>
                 </div>
                 <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="agreement-1-status">
                 Cannot start yet
                 </div>
             </li>
 
-            <li class="govuk-task-list__item">
+            {# <li class="govuk-task-list__item">
                 <div class="govuk-task-list__name-and-hint">
                 <div>Read terms and conditions</div>
                 </div>
@@ -147,46 +149,13 @@
                 <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="agreement-3-status">
                 Cannot start yet
                 </div>
-            </li>
+            </li> #}
+
             </ul>
         </li>
         <li>
 
-            <!-- Claim 01 Scenario 1 -->
-            <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
-            </h2>
-            
-            <ul class="govuk-task-list">
-            <li class="govuk-task-list__item">
-                <div class="govuk-task-list__name-and-hint">
-                <div>Download claim form</div>
-                </div>
-                <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-1-status">
-                Cannot start yet
-                </div>
-            </li>
-
-            <li class="govuk-task-list__item">
-                <div class="govuk-task-list__name-and-hint">
-                <div>Upload claim form and evidence</div>
-                </div>
-                <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-2-status">
-                Cannot start yet
-                </div>
-            </li>
-
-            <li class="govuk-task-list__item">
-                <div class="govuk-task-list__name-and-hint">
-                <div>Submit claim</div>
-                </div>
-                <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-3-status">
-                Cannot start yet
-                </div>
-            </li>
-        </ul>
-
-    </li>
+   </li>
 </ol>
     
     
