--- a/app/views/end-to-end/post-mvp/start-page.html
+++ b/app/views/end-to-end/post-mvp/start-page.html
@@ -31,6 +31,16 @@
             <li>an estimate the project costs will be over £87,500</li>
           </ul>
 
+          <h2 class="govuk-heading-m">How it works</h2>
+          <p>There are 3 stages to the application process.</p>
+          <ol class="govuk-list govuk-list--number">
+            <li>Tell us some basic details about your project by 3 February 2025. We'll review your project against our funding priorities.</li>
+            <li>If successful, you'll be invited to make a full application.</li>
+            <li>Submit your full application by 3 January 2026.</li>
+          </ol>
+
+          
+
           <h2 class="govuk-heading-m">Before you apply</h2>
             <p>Read the latest guidance on the water management grant to learn about our grant funding priorities.</p>  
 
@@ -41,6 +51,8 @@
               <li>information about the project (for example, irrigated land in hectares)</li>
               <li>estimated total cost of the items you need</li>
             </ul>
+
+
 
         {# <div class="govuk-inset-text">
           If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
