--- a/app/views/end-to-end/post-mvp/start-page.html
+++ b/app/views/end-to-end/post-mvp/start-page.html
@@ -17,7 +17,7 @@
 
       <p>Use this service to apply for a Water Management grant</p>
       {{ govukInsetText({
-        text: "This is round 3 of the water management grant. Applications    
+        text: "This is round 3 of the Water Management grant. Applications    
           must be submitted by 11.59pm on 3 February 2025."
       }) }}
           
@@ -28,14 +28,14 @@
           <ul class="govuk-list govuk-list--bullet">
             <li>grow crops for the food industry, are a nursery growing ornamentals or are a forestry nursery</li>
             <li>will do the grant-funded work in England</li>
-            <li>an estimate the project costs will be over £87,500</li>
+            <li>estimate the project costs will be over £87,500</li>
           </ul>
 
           <h2 class="govuk-heading-m">How it works</h2>
           <p>There are 3 stages to the application process.</p>
           <ol class="govuk-list govuk-list--number">
             <li>Tell us some basic details about your project by 3 February 2025. We'll review your project against our funding priorities.</li>
-            <li>If successful, you'll be invited to make a full application.</li>
+            <li>If successful, you'll be invited to make a full application by 19 May 2025.</li>
             <li>Submit your full application by 3 January 2026.</li>
           </ol>
 
@@ -44,14 +44,14 @@
           }) }}
 
           <h2 class="govuk-heading-m">Before you apply</h2>
-            <p>Read the latest guidance on the water management grant to learn about our grant funding priorities.</p>  
+            <p>Read the <a href="#">latest guidance on the Water Management grant</a> to learn about our grant funding priorities.</p>  
 
             <h2 class="govuk-heading-m">What you'll need:</h2>
             <p>You'll need to give us:</p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>information about your business (for example, number of employees and turnover)</li>
-              <li>information about the project (for example, irrigated land in hectares)</li>
-              <li>estimated total cost of the items you need</li>
+              <li>information about your organisation, including annual turnover</li>
+              <li>details on your project, including irrigated land in hectares</li>
+              <li>an estimated total cost of the items you need</li>
             </ul>
 
 
