--- a/app/views/end-to-end/post-mvp/start-page.html
+++ b/app/views/end-to-end/post-mvp/start-page.html
@@ -15,7 +15,7 @@
         Apply for a Water Management grant
       </h1>
 
-      <p>Use this service to apply for a Water Management grant</p>
+      <p>Use this service to apply for a Water Management grant.</p>
       {{ govukInsetText({
         text: "This is round 3 of the Water Management grant. Applications    
           must be submitted by 11.59pm on 3 February 2025."
@@ -46,7 +46,7 @@
           <h2 class="govuk-heading-m">Before you apply</h2>
             <p>Read the <a href="#">latest guidance on the Water Management grant</a> to learn about our grant funding priorities.</p>  
 
-            <h2 class="govuk-heading-m">What you'll need:</h2>
+            <h2 class="govuk-heading-m">What you'll need</h2>
             <p>You'll need to give us:</p>
             <ul class="govuk-list govuk-list--bullet">
               <li>information about your organisation, including annual turnover</li>
