remove project postcode from check details

--- a/app/views/end-to-end/post-mvp/eligibility/funding/check-details.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/check-details.html
@@ -78,14 +78,14 @@
                         </td>
                     </tr>
   
-                    <tr class="govuk-table__row--no-border">
+                    {# <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
                             <strong>Project postcode</strong>
                         </th>
                         <td class="govuk-table__cell">
                            {{ data['project-postcode'] or 'BO12 0LN' }}
                         </td>
-                    </tr>
+                    </tr> #}
 
                 </tbody>
             </table>
