title tweak to generic housing

--- a/app/views/generic/current/details/confirmation.html
+++ b/app/views/generic/current/details/confirmation.html
@@ -3,7 +3,7 @@
 {% extends 'generic/layout.html' %}
 
 {% block pageTitle %}
-  Confirmation
+    Details submitted
 {% endblock %}
 
 {% block content %}
