--- a/app/views/end-to-end/post-mvp/start-page.html
+++ b/app/views/end-to-end/post-mvp/start-page.html
@@ -17,8 +17,7 @@
 
       <p>Use this service to apply for a Water Management grant.</p>
       {{ govukInsetText({
-        text: "This is round 3 of the Water Management grant. Applications    
-          must be submitted by 11.59pm on 3 February 2025."
+        text: "This is round 3 of the Water Management grant. Your full application must be submitted by 11.59pm on 3 January 2026."
       }) }}
           
         </inset>
@@ -40,7 +39,7 @@
           </ol>
 
           {{ govukInsetText({
-            text: "We cannot guarantee you’ll receive a grant until we assess your full application."
+            text: "We cannot guarantee you'll receive a grant until we assess your full application."
           }) }}
 
           <h2 class="govuk-heading-m">Before you apply</h2>
