--- a/app/views/end-to-end/layout.html
+++ b/app/views/end-to-end/layout.html
@@ -9,7 +9,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
   <!-- Blank header with no service name for the start page -->
   {{ govukHeader({
     homepageUrl: "/",
-    serviceName: "Apply for a Water Management Grant",
+    serviceName: "Apply for a Water Management grant",
     serviceUrl: "/end-to-end/post-mvp/start-page"
     }) }}
 {% endblock %}
