--- a/app/views/end-to-end/post-mvp2/eligibility/funding/abstraction-licence.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/funding/abstraction-licence.html
@@ -1,4 +1,4 @@
-{% extends 'end-to-end/layout-account.html' %}
+{% extends 'end-to-end/layout.html' %}
 
 {% block pageTitle %}
      Does the project need an abstraction licence or a variation of one?
@@ -56,14 +56,14 @@
 
                 </form>
 
-                <form class="signout" style="display:flex;" action="/end-to-end/post-mvp/eligibility/common/application-saved" method="post">
+                {# <form class="signout" style="display:flex;" action="/end-to-end/post-mvp/eligibility/common/application-saved" method="post">
                     {{ govukButton({
                         id: 'nosignin',
                         name: 'nosignin',
                         text: "Save and come back later",
                         classes: "govuk-button--secondary"
                     }) }}
-                </form>
+                </form> #}
 
               </div>
     </div>
