--- a/app/views/end-to-end/index.html
+++ b/app/views/end-to-end/index.html
@@ -68,7 +68,7 @@
         </p>
 
         <p class='govuk-list app-list--definition'>
-          <a href='post-mvp2/start-page.html' class="govuk-link--no-visited-state">Post-MVP journey</a> - Dec 24<br>
+          <a href='post-mvp2/start-page.html' class="govuk-link--no-visited-state">Post-MVP journey 2</a> - Dec 24<br>
             Introducing GDS <a href="https://design-system.service.gov.uk/patterns/check-a-service-is-suitable/">eligibity service pattern</a> to test - all kill questions upfront as distict section of journey.<br>
             Adding RPS account page and email confirmation as entry points to service once user has saved their application.
         </p>
