--- a/app/views/end-to-end/post-mvp2/eligibility/common/login.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/login.html
@@ -14,7 +14,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form method="post" action="login-2fa">
+            <form method="post" action="choose-business">
 
                 <h1 class="govuk-heading-l">
                     Sign in using your Rural Payments account
