--- a/app/views/end-to-end/post-mvp2/eligibility/common/check-answers.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/check-answers.html
@@ -69,7 +69,7 @@
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a>
             </dd>
           </div>
-          <div class="govuk-summary-list__row">
+          {# <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Is the planned project on land the business owns?
             </dt>
@@ -79,40 +79,7 @@
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a>
             </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              What eligible items do you need for your project?
-            </dt>
-            <dd class="govuk-summary-list__value">
-               {{ data['items-needed'] | checkboxAnswersToList | safe }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> eligible items needed for your project</span></a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              What is the total estimated cost of the items?
-            </dt>
-            <dd class="govuk-summary-list__value">
-               {{ data['cost'] | inPounds | safe }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> eligible items needed for your project</span></a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-               Can you pay the remaining costs of {{ remainingCosts | inPounds }}?
-            </dt>
-            <dd class="govuk-summary-list__value">
-               {{ data['remaining-cost'] }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> can you pay the remainig costs</span></a>
-            </dd>
-          </div>
+          </div> #}
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
                Does the project need an abstraction licence or a variation of one?
@@ -124,42 +91,9 @@
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> can you pay the remainig costs</span></a>
             </dd>
           </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-               Are you currently irrigating?
-            </dt>
-            <dd class="govuk-summary-list__value">
-               {{ data['current-irrigating'] }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> can you pay the remainig costs</span></a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-               Will you increase your use of summer abstraction or mains?
-            </dt>
-            <dd class="govuk-summary-list__value">
-               {{ data['change-summerabs'] }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> can you pay the remainig costs</span></a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-               Where will the irrigation water come from?
-            </dt>
-            <dd class="govuk-summary-list__value">
-                 {{ data['water-source'] | checkboxAnswersToList | safe }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> can you pay the remainig costs</span></a>
-            </dd>
-          </div>
         </dl>
         
-        <h2 class="govuk-heading-m">Application details</h2>
+        {# <h2 class="govuk-heading-m">Application details</h2>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -205,12 +139,12 @@
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> licence period</span></a>
             </dd>
           </div>
-        </dl>
+        </dl> #}
 
         <!-- Moved from consent.html to align with best practice - user can see what they're agreeing to on same page as per GDS pattern -->
         <h2 class="govuk-heading-m">Now send your application</h2>
           <p class="govuk-body">I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
-          <p class="govuk-body">I understand the project’s eligibility and score is based on the answers I provided.</p>
+          {# <p class="govuk-body">I understand the project’s eligibility and score is based on the answers I provided.</p>
           
           <p class="govuk-body">I am aware that the information I submit will be:</p>  
             <ul class="govuk-list govuk-list--bullet">
@@ -218,24 +152,24 @@
               <li>shared with the Environment Agency so that they can check the details of my planned project</li>
             </ul>
            
-          <p class="govuk-body">I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application.</p>
+          <p class="govuk-body">I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application.</p> #}
           
-            <div class="govuk-checkboxes__item govuk-!-margin-top-6">
+            {# <div class="govuk-checkboxes__item govuk-!-margin-top-6">
               <input class="govuk-checkboxes__input" id="consent-to-terms-hint" name="consent-to-terms-hint" type="checkbox" value="{{ data['confirmation'] }}">
                 <label class="govuk-label govuk-checkboxes__label" for="consent-to-terms-hint">
                   (Optional)   I consent to being contacted about improving services
                 </label>
-            </div>
+            </div> #}
 
-            {{ govukWarningText({
+            {# {{ govukWarningText({
               text: "You can only submit your details once.",
               iconFallbackText: "Warning",
               classes: "govuk-!-margin-top-6"
-            }) }}
+            }) }} #}
 
           <!-- End consent copy -->
 
-        <form action="/form-handler" method="post" novalidate>
+        <form action="confirmation" method="post" novalidate>
           <input type="hidden" name="answers-checked" value="true">
           <button type="submit" class="govuk-button" data-module="govuk-button">
             Accept and send
