--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-0.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-0.html
@@ -19,15 +19,42 @@
 <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-           <span class="govuk-caption-xl">Browns Hill Farm reservoir (WM-VMA-1234)</span>
+           <span class="govuk-caption-xl">Browns Hill Farm reservoir</span>
             <h1 class="govuk-heading-xl">Apply for a Water Management grant</h1>
 
             <ol class="govuk-prototype-kit-task-list">
-            <li>
 
+                <li>
+                    <!-- EOI Scenario 3b -->
+                    <h2 class="govuk-prototype-kit-task-list__section">
+                        <span class="govuk-prototype-kit-task-list__section-number">1. </span> Check your eligibility
+                    </h2>
+
+                    <ul class="govuk-task-list">
+                    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                        <div class="govuk-task-list__name-and-hint">
+                        <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/common/country" aria-describedby="expression-of-interest-1-status">Check your eligibity</a>
+                        </div>
+                        <div class="govuk-task-list__status" id="expression-of-interest-1-status">
+                                Completed
+                        </div>
+                    </li>
+                    {# <li class="govuk-task-list__item">
+                        <div class="govuk-task-list__name-and-hint">
+                            Expression of interest outcome
+                        </div>
+                        <div class="govuk-task-list__status" id="expression-of-interest-4-status">
+                            Cannot start yet
+                        </div>
+                    </li> #}
+                    </ul>
+                </li>
+    
+             
+              <li>
                 <!-- EOI Scenario 3b -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Tell us about your project
+                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Tell us about your project
                 </h2>
                 <p>You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
 
@@ -73,7 +100,7 @@
                 <li>
                     <!-- Application Scenario 2a -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Prepare your application
+                    <span class="govuk-prototype-kit-task-list__section-number">3. </span> Prepare your application
                 </h2>
 
                 <ul class="govuk-task-list">
@@ -120,7 +147,7 @@
 
             <!-- Agreement Scenario 1 -->
             <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit your application
+            <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit your application
             </h2>
             <p>You must submit your full application by 11.59pm on <strong>3 January 2026</strong></p>
 
