--- a/app/views/end-to-end/post-mvp2/eligibility/common/project-start.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/common/project-start.html
@@ -31,7 +31,7 @@
                                 text: 'For example, quotes from suppliers, applying for planning permission'
                             },
                             attributes: {
-                                    'data-next': 'abstraction-licence'
+                                    'data-next': 'check-answers'
                                 }
                         },
                         {
@@ -50,7 +50,7 @@
                             value: 'No, we have not done any work on this project yet',
                             checked: true if data['project-start'] == 'No, we have not done any work on this project yet',
                             attributes: {
-                                    'data-next': 'abstraction-licence'
+                                    'data-next': 'check-answers'
                                 }
                         }
                     ]
