taks list tweak

--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-0-latest.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-0-latest.html
@@ -27,10 +27,8 @@
                 <li>
                     <!-- EOI Scenario 3b -->
                     <h2 class="govuk-prototype-kit-task-list__section">
-                        <span class="govuk-prototype-kit-task-list__section-number">1. </span> Register your interest
+                        <span class="govuk-prototype-kit-task-list__section-number">1. </span> Check your eligibility
                     </h2>
-
-                    <p class="govuk-body" style="margin-top: 0em; margin-bottom: 1.4em;">You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
 
                     <ul class="govuk-task-list">
                     <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -49,7 +47,18 @@
                             Cannot start yet
                         </div>
                     </li> #}
+                    </ul>
+                </li>
+    
+             
+              <li>
+                <!-- EOI Scenario 3b -->
+                <h2 class="govuk-prototype-kit-task-list__section">
+                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Tell us about your project
+                </h2>
+                <p>You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
 
+                <ul class="govuk-task-list">
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">Enter your organisation's details</a>
