--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-0.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-0.html
@@ -29,13 +29,12 @@
                     <h2 class="govuk-prototype-kit-task-list__section">
                         <span class="govuk-prototype-kit-task-list__section-number">1. </span> Register your interest
                     </h2>
-
-                    <p class="govuk-body" style="margin-top: 0em; margin-bottom: 1.4em;">You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
+                    <p class="govuk-body">You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
 
                     <ul class="govuk-task-list">
                     <li class="govuk-task-list__item govuk-task-list__item--with-link">
                         <div class="govuk-task-list__name-and-hint">
-                        <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/common/country" aria-describedby="expression-of-interest-1-status">Check your eligibity</a>
+                        <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/common/country" aria-describedby="expression-of-interest-1-status">Check your eligibility</a>
                         </div>
                         <div class="govuk-task-list__status" id="expression-of-interest-1-status">
                                 Completed
@@ -52,7 +51,7 @@
 
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">Enter your organisation's details</a>
+                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">Enter your organisation's details</a>
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-1-status">
                         <strong class="govuk-tag govuk-tag--blue">
@@ -86,7 +85,7 @@
                 </li> #}
                 </ul>
             </li>
-            <p class="govuk-body" style="margin-top: 0em; margin-bottom: 2em;">We’ll let you know the outcome of our review by <strong>19 May 2025</strong></p>
+            <p class="govuk-body" style="margin-top: 0em; margin-bottom: 2em;">We'll let you know the outcome of our review by <strong>19 May 2025</strong></p>
     
                 <li>
                     <!-- Application Scenario 2a -->
