--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-1.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-1.html
@@ -27,22 +27,30 @@
 
                 <!-- EOI Scenario 3b -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Tell us about your project
+                    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Register your interest
                 </h2>
                 <p>You must complete this stage by 11.59pm on <strong>3 February 2025</strong></p>
 
                 <ul class="govuk-task-list">
+                    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                        <div class="govuk-task-list__name-and-hint">
+                        <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/common/country" aria-describedby="expression-of-interest-1-status">Check your eligibility</a>
+                        </div>
+                            <div class="govuk-task-list__status" id="expression-of-interest-1-status">
+                                Completed
+                         </div>
+                    </li>
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp/eligibility/funding/check-details" aria-describedby="expression-of-interest-1-status">Enter your organisation's details</a>
+                    <a class="govuk-link govuk-task-list__link" href="/end-to-end/post-mvp2/eligibility/funding/check-details" aria-describedby="expression-of-interest-2-status">Enter your organisation's details</a>
                     </div>
                         <div class="govuk-task-list__status" id="expression-of-interest-1-status">
                             Completed
-                     </div>
+                        </div>
                 </li>
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                        <a class="govuk-link govuk-task-list__link" href="../eligibility/common/farming-type" aria-describedby="expression-of-interest-2-status">Check your project meets our funding priorities</a>
+                        <a class="govuk-link govuk-task-list__link" href="../eligibility/common/project-items.html" aria-describedby="expression-of-interest-3-status">Check your project meets our funding priorities</a>
                     </div>
                     <div class="govuk-task-list__status" id="application-1-status">
                         <strong class="govuk-tag govuk-tag--blue">
