--- a/app/views/end-to-end/post-mvp2/front-door/landing.html
+++ b/app/views/end-to-end/post-mvp2/front-door/landing.html
@@ -5,7 +5,7 @@
 {%- block beforeContent -%}
 
 
-<a href="/to-be/v3/start/your-businesses-list" class="govuk-back-link">Back to your businesses</a> 
+{# <a href="/to-be/v3/start/your-businesses-list" class="govuk-back-link">Back to your businesses</a>  #}
 
 {% endblock %} 
 
@@ -34,16 +34,14 @@
     <p class="govuk-caption-m govuk-!-margin-bottom-2">Single Business Identifier (SBI): 123456789</p>
   {% endif %}
 
-  <p class="govuk-!-margin-bottom-7"><a href="#" class="govuk-link--no-visited-state">Choose another business</a></p>
+  {# <p class="govuk-!-margin-bottom-7"><a href="#" class="govuk-link--no-visited-state">Choose another business</a></p> #}
 
   </div>
 </div>
-
+<br>
     <div class="govuk-width-container">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-
-
 
         <div class="gem-c-cards card-page">
           <ul class="gem-c-cards__list" style="grid-template-columns:1fr 1fr;">
